cmake_minimum_required(VERSION 3.22)
project(dawn_natives_deps LANGUAGES C CXX)

if(NOT DEFINED DAWN_NATIVES_DAWN_SOURCE_DIR)
    message(FATAL_ERROR "DAWN_NATIVES_DAWN_SOURCE_DIR is required")
endif()
if(NOT DEFINED DAWN_NATIVES_STAGE_DIR)
    message(FATAL_ERROR "DAWN_NATIVES_STAGE_DIR is required")
endif()

file(TO_CMAKE_PATH "${DAWN_NATIVES_DAWN_SOURCE_DIR}" DAWN_NATIVES_DAWN_SOURCE_DIR)
file(TO_CMAKE_PATH "${DAWN_NATIVES_STAGE_DIR}" DAWN_NATIVES_STAGE_DIR)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(ANDROID)
    add_compile_options("$<$<CONFIG:Release>:-g0>")
endif()

set(DAWN_NATIVES_ARCHIVE_DIR "${CMAKE_BINARY_DIR}/dawn-natives-lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${DAWN_NATIVES_ARCHIVE_DIR}")
foreach(CONFIG DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG} "${DAWN_NATIVES_ARCHIVE_DIR}")
endforeach()

set(DAWN_NATIVES_DAWN_BUILD_DIR "${CMAKE_BINARY_DIR}/dawn")
set(DAWN_NATIVES_DAWN_GEN_DIR "${DAWN_NATIVES_DAWN_BUILD_DIR}/gen")

set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_BENCHMARKS OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_NODE_BINDINGS OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_FUZZERS OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_MONOLITHIC_LIBRARY STATIC CACHE STRING "" FORCE)
set(DAWN_BUILD_PROTOBUF OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_INSTALL OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_PIC ON CACHE BOOL "" FORCE)
set(DAWN_ENABLE_RTTI OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_D3D11 OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_D3D12 OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_DESKTOP_GL OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_METAL OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_NULL OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_OPENGLES OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_SPIRV_VALIDATION OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_SWIFTSHADER OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_VULKAN OFF CACHE BOOL "" FORCE)
set(DAWN_FETCH_DEPENDENCIES ON CACHE BOOL "" FORCE)
set(DAWN_SUPPORTS_CXX_MODULES OFF CACHE BOOL "" FORCE)
set(DAWN_USE_BUILT_DXC OFF CACHE BOOL "" FORCE)
set(DAWN_USE_GLFW OFF CACHE BOOL "" FORCE)
set(DAWN_USE_WAYLAND OFF CACHE BOOL "" FORCE)
set(DAWN_USE_WINDOWS_UI OFF CACHE BOOL "" FORCE)
set(DAWN_USE_X11 OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_BENCHMARKS OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_CMD_TOOLS OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_FUZZERS OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_GLSL_VALIDATOR OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_IR_BINARY OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_NULL_WRITER OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_TINTD OFF CACHE BOOL "" FORCE)
set(TINT_ENABLE_IR_DUMPING OFF CACHE BOOL "" FORCE)
set(TINT_ENABLE_IR_VALIDATION_ASSERTS OFF CACHE BOOL "" FORCE)

if(WIN32)
    set(DAWN_ENABLE_D3D12 ON CACHE BOOL "" FORCE)
    set(TINT_BUILD_HLSL_WRITER ON CACHE BOOL "" FORCE)
elseif(APPLE)
    set(DAWN_ENABLE_METAL ON CACHE BOOL "" FORCE)
    set(TINT_BUILD_MSL_WRITER ON CACHE BOOL "" FORCE)
elseif(ANDROID)
    set(DAWN_ENABLE_VULKAN ON CACHE BOOL "" FORCE)
    set(TINT_BUILD_SPV_READER ON CACHE BOOL "" FORCE)
    set(TINT_BUILD_SPV_WRITER ON CACHE BOOL "" FORCE)
elseif(UNIX)
    set(DAWN_ENABLE_VULKAN ON CACHE BOOL "" FORCE)
    set(DAWN_USE_WAYLAND ON CACHE BOOL "" FORCE)
    set(DAWN_USE_X11 ON CACHE BOOL "" FORCE)
    set(TINT_BUILD_SPV_READER ON CACHE BOOL "" FORCE)
    set(TINT_BUILD_SPV_WRITER ON CACHE BOOL "" FORCE)
endif()

set(TINT_BUILD_WGSL_READER ON CACHE BOOL "" FORCE)
set(TINT_BUILD_WGSL_WRITER ON CACHE BOOL "" FORCE)

set(DAWN_THIRD_PARTY_DIR "${DAWN_NATIVES_DAWN_SOURCE_DIR}/third_party" CACHE STRING "" FORCE)
set(DAWN_ABSEIL_DIR "${DAWN_THIRD_PARTY_DIR}/abseil-cpp" CACHE STRING "" FORCE)
set(DAWN_EGL_REGISTRY_DIR "${DAWN_THIRD_PARTY_DIR}/EGL-Registry/src" CACHE STRING "" FORCE)
set(DAWN_EMDAWNWEBGPU_DIR "${DAWN_THIRD_PARTY_DIR}/emdawnwebgpu" CACHE STRING "" FORCE)
set(DAWN_GENERATOR_DIR "${DAWN_NATIVES_DAWN_SOURCE_DIR}/generator" CACHE PATH "" FORCE)
set(DAWN_GLFW_DIR "${DAWN_THIRD_PARTY_DIR}/glfw3/src" CACHE STRING "" FORCE)
set(DAWN_GLSLANG_DIR "${DAWN_THIRD_PARTY_DIR}/glslang/src" CACHE STRING "" FORCE)
set(DAWN_GOOGLETEST_DIR "${DAWN_THIRD_PARTY_DIR}/googletest" CACHE STRING "" FORCE)
set(DAWN_INCLUDE_DIR "${DAWN_NATIVES_DAWN_SOURCE_DIR}/include" CACHE PATH "" FORCE)
set(DAWN_JINJA2_DIR "${DAWN_THIRD_PARTY_DIR}/jinja2" CACHE STRING "" FORCE)
set(DAWN_KHRONOS_DIR "${DAWN_THIRD_PARTY_DIR}/khronos" CACHE STRING "" FORCE)
set(DAWN_LPM_DIR "${DAWN_THIRD_PARTY_DIR}/libprotobuf-mutator/src" CACHE STRING "" FORCE)
set(DAWN_MARKUPSAFE_DIR "${DAWN_THIRD_PARTY_DIR}/markupsafe" CACHE STRING "" FORCE)
set(DAWN_OPENGL_REGISTRY_DIR "${DAWN_THIRD_PARTY_DIR}/OpenGL-Registry/src" CACHE STRING "" FORCE)
set(DAWN_PROTOBUF_DIR "${DAWN_THIRD_PARTY_DIR}/protobuf" CACHE STRING "" FORCE)
set(DAWN_SPIRV_HEADERS_DIR "${DAWN_THIRD_PARTY_DIR}/spirv-headers/src" CACHE STRING "" FORCE)
set(DAWN_SPIRV_TOOLS_DIR "${DAWN_THIRD_PARTY_DIR}/spirv-tools/src" CACHE STRING "" FORCE)
set(DAWN_SRC_DIR "${DAWN_NATIVES_DAWN_SOURCE_DIR}/src" CACHE PATH "" FORCE)
set(DAWN_SWIFTSHADER_DIR "${DAWN_THIRD_PARTY_DIR}/swiftshader" CACHE STRING "" FORCE)
set(DAWN_TEMPLATE_DIR "${DAWN_NATIVES_DAWN_SOURCE_DIR}/generator/templates" CACHE PATH "" FORCE)
set(DAWN_VULKAN_HEADERS_DIR "${DAWN_THIRD_PARTY_DIR}/vulkan-headers/src" CACHE STRING "" FORCE)
set(DAWN_VULKAN_LOADER_DIR "${DAWN_THIRD_PARTY_DIR}/vulkan-loader/src" CACHE STRING "" FORCE)
set(DAWN_VULKAN_UTILITY_LIBRARIES_DIR "${DAWN_THIRD_PARTY_DIR}/vulkan-utility-libraries/src" CACHE STRING "" FORCE)
set(DAWN_WEBGPU_HEADERS_DIR "${DAWN_THIRD_PARTY_DIR}/webgpu-headers/src" CACHE STRING "" FORCE)
set(NODE_ADDON_API_DIR "${DAWN_THIRD_PARTY_DIR}/node-addon-api" CACHE STRING "" FORCE)
set(NODE_API_HEADERS_DIR "${DAWN_THIRD_PARTY_DIR}/node-api-headers" CACHE STRING "" FORCE)
set(WEBGPU_IDL_PATH "${DAWN_THIRD_PARTY_DIR}/gpuweb/webgpu.idl" CACHE STRING "" FORCE)
set(DAWN_BUILD_GEN_DIR "${DAWN_NATIVES_DAWN_GEN_DIR}" CACHE PATH "" FORCE)

add_subdirectory("${DAWN_NATIVES_DAWN_SOURCE_DIR}" dawn EXCLUDE_FROM_ALL)

if(NOT TARGET webgpu_dawn)
    message(FATAL_ERROR "Dawn target webgpu_dawn was not created")
endif()

set(DAWN_NATIVES_TARGETS_FILE "${DAWN_NATIVES_STAGE_DIR}/cmake/dawn-natives-targets.cmake")
configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/dawn-natives-targets.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/dawn-natives-targets.cmake"
    @ONLY)

add_custom_target(stage_dawn_natives
    COMMAND "${CMAKE_COMMAND}" -E rm -rf "${DAWN_NATIVES_STAGE_DIR}"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${DAWN_NATIVES_STAGE_DIR}/lib"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${DAWN_NATIVES_STAGE_DIR}/include"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${DAWN_NATIVES_STAGE_DIR}/cmake"
    COMMAND "${CMAKE_COMMAND}" -E copy "$<TARGET_FILE:webgpu_dawn>" "${DAWN_NATIVES_STAGE_DIR}/lib/$<TARGET_FILE_NAME:webgpu_dawn>"
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${DAWN_NATIVES_DAWN_GEN_DIR}/include" "${DAWN_NATIVES_STAGE_DIR}/include"
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${DAWN_NATIVES_DAWN_SOURCE_DIR}/include" "${DAWN_NATIVES_STAGE_DIR}/include"
    COMMAND "${CMAKE_COMMAND}" -E copy "${CMAKE_CURRENT_BINARY_DIR}/dawn-natives-targets.cmake" "${DAWN_NATIVES_TARGETS_FILE}"
    DEPENDS webgpu_dawn
    COMMENT "Staging dawn-natives static library and import target")
